# eBPF-machine

./: .gitattributes  .gitignore  ARTIFACT.md  EDITORIAL_DECISION.md  ETHICS.md  INTERPRETER_IMPLEMENTATION_2026-07-10.md  Makefile  PAPER_DRAFT.md  PAPER_REPORT.md  PAPER_REPORT.tex  PAPER_REPORT_ZH.md  PAPER_REPORT_ZH.tex  PEER_REVIEW.md  README.md
residuality-auditor/: LICENSE  MANIFEST.in  README.md  REPRODUCE.md  pyproject.toml
residuality-auditor/artifact/: README.md  build_replay_capsule.py  expected-results.json  replay-manifest.json  reproduce.py
residuality-auditor/artifact/evidence/: contextual-matrix-live-20260720-03.json  replay-capsule.tar.xz  reproduction-summary.json
residuality-auditor/examples/: map_nand_coarse_report.json  map_nand_exact_report.json
residuality-auditor/linux/: Makefile  README.md  context-suite-v1.json
residuality-auditor/linux/fixtures/: contract-candidate.json  contract-established.json  events.jsonl  runtime.json
residuality-auditor/linux/include/: rac_events.h  rac_v2_events.h
residuality-auditor/linux/scripts/: enrich_events.py  generate_stock_r_context.py  make_contract.py  preflight.sh  run_linux_r.sh  (+5 more)
residuality-auditor/schemas/: assessment-v1.schema.json  ebrc-claim-v1.schema.json  ebrc-context-transform-v1.schema.json  ebrc-context-transport-v1.schema.json  ebrc-evidence-graph-v1.schema.json  ebrc-proof-v1.schema.json  evidence-v1.schema.json  query-v1.schema.json
residuality-auditor/stock-linux-r-proof/: CHECKSUMS.sha256  CLAIM.md  LIMITATIONS.md  MANIFEST.json  REPRODUCE.md
residuality-auditor/tests/: test_auditor.py  test_concretization.py  test_context_runtime.py  test_context_suite.py  test_definition2.py  test_ebrc.py  test_ebrc_context.py  test_ebrc_context_runner.py  test_enrich_events.py  test_evidence_schema.py  test_frontier.py  test_linux_r.py  test_reproduction_artifact.py  test_stock_linux_adapter.py  test_stock_r_v2.py  test_subsumption.py
(+818 files in other folders)
