[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "residuality-auditor"
version = "0.3.0"
description = "Finite-state and Linux verifier auditor for post-acceptance report-relative residuality claims"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Chengao Zhang"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
]
dependencies = [
  "rfc8785>=0.1.4,<1",
]

[project.scripts]
residuality-auditor = "residuality_auditor.cli:main"

[project.optional-dependencies]
test = [
  "jsonschema>=4.23,<5",
  "rfc8785>=0.1.4,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/residuality-auditor/schemas" = [
  "schemas/query-v1.schema.json",
  "schemas/evidence-v1.schema.json",
  "schemas/assessment-v1.schema.json",
  "schemas/ebrc-claim-v1.schema.json",
  "schemas/ebrc-evidence-graph-v1.schema.json",
  "schemas/ebrc-proof-v1.schema.json",
  "schemas/ebrc-context-transform-v1.schema.json",
  "schemas/ebrc-context-transport-v1.schema.json",
]
